takip edilen yazarlar engelleniyor.

v2.1
gönderim: - yayın:
ekşi sözlük tarafından engelleme hızı limiti getirildiği için  (benim loglarıma göre 8/1/2023-20/1/2023 arasında) 
işlemlere cooldown süresi eklendi. (mevcut işlem hızı limiti: 6 engel/dakika, 10 engeli kaldır/dakika)
notification sayfasına cooldown sayacı eklendi.
istekler bir queue'da toplanıp art arda işlendi.
veri gönderme ayarında iki adet 2-state switch yerine bir adet 3-state switch kullanıldı.
3-state switch, sunucuya veri gönderme ayarı, için bir uyarı eklenerek kullanıcı anonim göndermeye teşvik edildi.
liste modunde yazar isimlerinin başında '@' karakteri varsa silindi.

YÜKSEK ÖNCELİKLİ OLARAK YAPILMASI PLANLANANLAR
[acil]notification kısmında bekleme esnasında queue hakkında bilgi verilebilir. (ayrıca tahmini bitiş süresi hesaplanabilir.)
[acil]tüm engeli kaldırma algoritması ekşisözlüğün güncellemesi nedeniyle çalışmıyor.
[acil]sessize al özelliği entegre edilmeli.
[acil]sessize al özelliği ayarlardan kapatılabilir bir opsiyon olarak sunulabilir.
takip edilen yazarlar engellenemesin ayarı
max yazar limiti durumu handle edilmeli
performans analizi yapılmalı
  logger'ın etkisi gözlemlenmeli
    array silindiğinde gerçekten bellekten siliniyor mu, reflerden dolayı memory leak oluşuyor mu?
    log.getData yeni arraylere kopyalanıyor mu, ref değeri mi dönüyor?
    obje içinde array silindiğinde reflerin durumu ne oluyor?
[belki]engel nedeni seçilebilmeli
istatiki sonuçlar görüntülenebilmeli
[belki]istatistiki verilere göre engel yapılabilmeli
10000 yazarı engellediği görüldü (5000 yazar ekşi limiti) readme sayfasına eklenebilir.
engel limitine ulaşıldığında durması sağlanmalı ve belki uyarı verebilir.
tüm engelleri kaldırma işlemi çok hızlı gerçekleşebiliyor. hızı saniyede max 15 engeli kaldırma işlemine düşürülmeli. (throttling)

DÜŞÜK ÖNCELİKLİ OLARAK YAPILMASI PLANLANANLAR